<resources>
    <string name="app_name">Calculator</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="minus_plus">-/+</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
    <string name="backspace">backspace</string>
    <string name="divider">/</string>
    <string name="multiplier">*</string>
    <string name="CE">CE</string>
    <string name="C">C</string>
    <string name="sin">sin()</string>
    <string name="cos">cos()</string>
    <string name="tg">tg()</string>
    <string name="ctg">ctg()</string>
    <string name="invalid_exp">Invalid expression!</string>
</resources>